--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -6,6 +6,12 @@ $color-black: #000;
 $color-white: #fff;
 $color-charcoal: #475168;
 
+// Fonts.
+
+$default-font-family: 'Helvetica Neue', Arial, sans-serif;
+$default-font-size: 16px;
+$default-font-color: $color-charcoal;
+
 // Defaults.
 
 $default-border-radius: 3px;
