--- a/templates/components/pagination/views-mini-pager.html.twig
+++ b/templates/components/pagination/views-mini-pager.html.twig
@@ -18,14 +18,14 @@
     <ul class="pager__items js-pager__items">
       {% if items.previous %}
         <li class="pager__item pager__item--previous">
-          <a href="{{ items.previous.href }}" title="{{ 'Go to previous page'|t }}" rel="prev" {{ items.previous.attributes|without('href', 'title', 'rel') }}>
+          <a class="pager__link" href="{{ items.previous.href }}" title="{{ 'Go to previous page'|t }}" rel="prev" {{ items.previous.attributes|without('href', 'title', 'rel') }}>
             <span class="visually-hidden">{{ 'Previous page'|t }}</span>
             <span aria-hidden="true">{{ items.previous.text|default('‹‹'|t) }}</span>
           </a>
         </li>
       {% else %}
         <li class="pager__item pager__item--previous pager__item--disabled">
-          <a title="{{ 'Go to previous page'|t }}" rel="prev" aria-disabled="true" {{ items.previous.attributes|without('href', 'title', 'rel') }}>
+          <a class="pager__link" title="{{ 'Go to previous page'|t }}" rel="prev" aria-disabled="true" {{ items.previous.attributes|without('href', 'title', 'rel') }}>
             <span class="visually-hidden">{{ 'Previous page'|t }}</span>
             <span aria-hidden="true">{{ items.previous.text|default('‹‹'|t) }}</span>
           </a>
@@ -34,22 +34,24 @@
 
       {% if items.current %}
         <li class="pager__item pager__item--current">
-          {%- trans -%}
-            Page {{ items.current }}
-          {%- endtrans -%}
+          <div class="pager__link">
+            {%- trans -%}
+              Page {{ items.current }}
+            {%- endtrans -%}
+          </div>
         </li>
       {% endif %}
 
       {% if items.next %}
         <li class="pager__item pager__item--next">
-          <a href="{{ items.next.href }}" title="{{ 'Go to next page'|t }}" rel="next" {{ items.next.attributes|without('href', 'title', 'rel') }}>
+          <a class="pager__link" href="{{ items.next.href }}" title="{{ 'Go to next page'|t }}" rel="next" {{ items.next.attributes|without('href', 'title', 'rel') }}>
             <span class="visually-hidden">{{ 'Next page'|t }}</span>
             <span aria-hidden="true">{{ items.next.text|default('››'|t) }}</span>
           </a>
         </li>
       {% else %}
         <li class="pager__item pager__item--next pager__item--disabled">
-          <a title="{{ 'Go to next page'|t }}" rel="next" aria-disabled="true" {{ items.next.attributes|without('href', 'title', 'rel') }}>
+          <a class="pager__link" title="{{ 'Go to next page'|t }}" rel="next" aria-disabled="true" {{ items.next.attributes|without('href', 'title', 'rel') }}>
             <span class="visually-hidden">{{ 'Next page'|t }}</span>
             <span aria-hidden="true">{{ items.next.text|default('››'|t) }}</span>
           </a>
