Changed default classes on the regions

--- a/templates/layout/region--footer.html.twig
+++ b/templates/layout/region--footer.html.twig
@@ -15,7 +15,7 @@
  */
 #}
 {% if content %}
-  <div{{ attributes.addClass('region-footer') }}>
+  <footer role="contentinfo"{{ attributes.addClass('site-footer') }}>
     {{ content }}
-  </div>
+  </footer>
 {% endif %}
