--- a/templates/layout/region--header.html.twig
+++ b/templates/layout/region--header.html.twig
@@ -15,7 +15,7 @@
  */
 #}
 {% if content %}
-  <div{{ attributes.addClass('region-header') }}>
+  <header role="banner"{{ attributes.addClass('site-header') }}>
     {{ content }}
-  </div>
+  </header>
 {% endif %}
