Minor change to input templates

--- a/templates/components/form/input--submit.html.twig
+++ b/templates/components/form/input--submit.html.twig
@@ -12,4 +12,5 @@
  * @ingroup themeable
  */
 #}
-<input{{ attributes.addClass(['button', 'button--primary']) }} />{{ children }}
+<input{{ attributes.addClass(['button', 'button--primary']) }} />
+{{ children }}
