Added default font color, weight, family and size

--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -2,7 +2,10 @@
 
 html,
 body {
-  color: $color-charcoal;
+  color: $default-font-color;
+  font-family: $default-font-family;
+  font-size: $default-font-size;
+  font-weight: $default-font-weight;
 }
 
 
