--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -8,9 +8,10 @@ $color-charcoal: #475168;
 
 // Fonts.
 
-$default-font-family: 'Helvetica Neue', Arial, sans-serif;
-$default-font-size: 16px;
 $default-font-color: $color-charcoal;
+$default-font-family: 'Source Sans Pro', sans-serif;
+$default-font-size: 16px;
+$default-font-weight: 400;
 
 // Defaults.
 
