--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -9,8 +9,12 @@ body {
 }
 
 
-a, a:visited {
+a,
+a:visited {
   text-decoration: none;
 }
 
-a:active, a:hover {}
+a:active,
+a:hover {
+  text-decoration: none;
+}
