Added font smoothing

--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -8,6 +8,10 @@ body {
   font-weight: $default-font-weight;
 }
 
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
 a,
 a:visited {
