Fixed syntax error in the status messages template

--- a/templates/components/status-messages.html.twig
+++ b/templates/components/status-messages.html.twig
@@ -33,7 +33,7 @@
     {%
       set type_class = [
         'status-messages',
-        'status-messages--' + type,
+        'status-messages--' ~ type,
       ]
     %}
 
