Added basic breakpoint system

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,5 +1,15 @@
 // Variables.
 
+// Breakpoints
+
+$breakpoints: (
+  mobile: 0,
+  tablet: 600px,
+  tablet-landscape: 900px,
+  desktop: 1200px,
+  desktop-large: 1800px,
+) !default;
+
 // Colors.
 
 $color-black: #000;
