Updated comment style

--- a/src/scss/ckeditor.scss
+++ b/src/scss/ckeditor.scss
@@ -1,3 +1,5 @@
+// CKEditor stylesheet
+//
 // This file is used to create the styling for the CKEditor WYSIWYG.
 //
 // Only include styling that is relevant for content that may be added to the
