--- a/src/scss/components/button-group.scss
+++ b/src/scss/components/button-group.scss
@@ -1,6 +1,6 @@
-@import '../variables';
+// Button group styling
 
-// Button group styling.
+@import '../variables';
 
 .button-group {
   display: flex;
