--- a/src/scss/components/pagination.scss
+++ b/src/scss/components/pagination.scss
@@ -1,9 +1,9 @@
+// Pagination styling
+
 @import '../variables';
 
 $pager-padding: 20px;
 $pager-item-padding: 6px 12px;
-
-// Pagination styling.
 
 .pager {
   padding: $pager-padding;
