--- a/src/scss/components/status-messages.scss
+++ b/src/scss/components/status-messages.scss
@@ -1,6 +1,6 @@
-@import '../variables';
+// Styling for status messages
 
-// Styling for status messages.
+@import '../variables';
 
 .status-messages {
   &--error {
