Added boostrap as a dependency
This lets is include the responsive mixins directly from the boostrap framework instead of copying the mixins and functions manually.

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -10,6 +10,13 @@ $breakpoints: (
   desktop-large: 1800px,
 ) !default;
 
+// Bootstrap
+//
+// This configures the breakpoints for usage with the bootstrap responsive
+// mixins.
+
+$grid-breakpoints: $breakpoints;
+
 // Colors.
 
 $color-black: #000;
