--- a/src/scss/components/status-message.scss
+++ b/src/scss/components/status-message.scss
@@ -1,8 +1,4 @@
-// Styling for status messages
-
-@import '../variables';
-
-.status-messages {
+.status-message {
   &--error {
     background: #f8d7da;
     border: 1px solid #f5c6cb;
