--- a/src/scss/components/pagination.scss
+++ b/src/scss/components/pagination.scss
@@ -1,6 +1,4 @@
-// Pagination styling
-
-@import '../variables';
+@use '../variables/color';
 
 $pager-padding: 20px;
 $pager-item-padding: 6px 12px;
@@ -32,10 +30,10 @@ $pager-item-padding: 6px 12px;
   }
 
   &--disabled {
-    color: darken($color-white, 25%);
+    color: darken(color.$white, 25%);
   }
 
   &--current {
-    color: $color-black;
+    color: color.$black;
   }
 }
