--- a/src/scss/mixins/responsive.scss
+++ b/src/scss/mixins/responsive.scss
@@ -6,4 +6,11 @@
 // Check the documentation for examples on how the mixins can be used.
 // @see https://getbootstrap.com/docs/4.3/layout/grid/#example-usage
 
-@import '~bootstrap/scss/mixins/breakpoints';
+@use '../variables/responsive';
+
+// This configures the breakpoints for usage with the bootstrap responsive
+// mixins.
+
+$grid-breakpoints: $breakpoints;
+
+@use 'bootstrap/scss/mixins/breakpoints';
