--- a/src/scss/print.scss
+++ b/src/scss/print.scss
@@ -1,8 +1,3 @@
 // Print styling
-
-@import 'variables';
-
-// Import existing styling.
-@import 'general';
-
+//
 // Styling for content that should be printed.
