--- a/src/scss/mixins/responsive.scss
+++ b/src/scss/mixins/responsive.scss
@@ -1,10 +1,10 @@
 // Responsive mixins
 //
 // This uses the responsive breakpoint mixins available in the bootstrap
-// framework.
+// framework. Check the documentation for examples on how the mixins
+// can be used.
 //
-// Check the documentation for examples on how the mixins can be used.
-// @see https://getbootstrap.com/docs/4.3/layout/grid/#example-usage
+// @see https://getbootstrap.com/docs/5.0/layout/grid/#example-usage
 
 @use '../variables/responsive';
 
