Added example image
This helps with verifying that assets are loaded as they should.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,6 +25,7 @@
 @use './components/breadcrumb';
 @use './components/button-group';
 @use './components/button';
+@use './components/image' as component-image;
 @use './components/pagination';
 @use './components/status-message';
 @use './components/text';
