--- a/src/scss/variables/color.scss
+++ b/src/scss/variables/color.scss
@@ -3,3 +3,19 @@
 $black: #000;
 $white: #fff;
 $charcoal: #475168;
+
+$primary-100: #94cdff;
+$primary-300: #191ad0;
+$primary-400: #2124a6;
+$primary-500: #111a7e;
+$primary-700: #010965;
+$primary-900: #070a2c;
+
+$grey-100: #e1e5f3;
+$grey-300: #a6a8d2;
+$grey-500: #566587;
+$grey-900: #1e2126;
+
+$accent-bright-blue: #2b2bef;
+$accent-samlon: #eb6767;
+$accent-sea-shell: #f5edde;
