--- a/src/scss/variables/color.scss
+++ b/src/scss/variables/color.scss
@@ -4,6 +4,8 @@ $black: #000;
 $white: #fff;
 $charcoal: #475168;
 
+$background: #18249b;
+
 $primary-100: #94cdff;
 $primary-300: #191ad0;
 $primary-400: #2124a6;
