--- a/src/stories/components/event-card/event-card.html.twig
+++ b/src/stories/components/event-card/event-card.html.twig
@@ -1,6 +1,6 @@
 <div class="event-card">
   <a href="{{ url }}" class="event-card__image-link">
-    <img src="{{ image.src }}" alt="{{ image.alt }}" class="event-card__image">
+    {{- image -}}
   </a>
 
   <time class="event-card__date" datetime="{{ date }}">
@@ -19,3 +19,4 @@
     {{- text -}}
   </div>
 </div>
+
