--- a/templates/components/form/input--submit.html.twig
+++ b/templates/components/form/input--submit.html.twig
@@ -12,5 +12,5 @@
  * @ingroup themeable
  */
 #}
-<input{{ attributes.addClass(['button', 'button--primary']) }} />
+<input{{ attributes.addClass('block w-full bg-blue-100') }} />
 {{ children }}
