--- a/templates/system/html.html.twig
+++ b/templates/system/html.html.twig
@@ -33,7 +33,7 @@
     <css-placeholder token="{{ placeholder_token }}">
     <js-placeholder token="{{ placeholder_token }}">
   </head>
-  <body{{ attributes }}>
+  <body{{ attributes.addClass('bg-organic') }}>
     {#
       Keyboard navigation/accessibility link to main content section in
       page.html.twig.
